--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,15 +4,16 @@ unzip = true
 newest = false
 versions = versions
 prefer-final = true
+relative-paths = true
+
 find-links +=
     http://effbot.org/downloads/
 parts = instance
 
 [instance]
 recipe = plone.recipe.zope2instance
-http-address = 8080
 user = admin:admin
+relative-paths = true
 eggs =
     Plone
     Pillow
-
