--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,3 +17,14 @@ relative-paths = true
 eggs =
     Plone
     Pillow
+    RelStorage
+    psycopg2
+rel-storage =
+    keep-history false
+    blob-dir /tmp/blobcache
+    shared-blob-dir false
+    type postgresql
+    host PG_HOST
+    dbname PG_DBNAME
+    user PG_USER
+    password PG_PASS
