--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,8 +6,7 @@ versions = versions
 prefer-final = true
 relative-paths = true
 
-find-links +=
-    http://effbot.org/downloads/
+find-links += http://effbot.org/downloads/
 parts = instance
 
 [instance]
