now that I confirmed that Travis fails on broken builds, I can re-add Plone

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ recipe = plone.recipe.zope2instance
 user = admin:admin
 relative-paths = true
 eggs =
-#     Plone
+    Plone
     Pillow
     RelStorage
     psycopg2
