initial setup for env var support

--- a/heroku.cfg
+++ b/heroku.cfg
@@ -2,8 +2,12 @@
 extends = buildout.cfg
 relative-paths = true
 
+[env]
+recipe = collective.recipe.environment
+
 [instance]
 relative-paths = true
+admin: ${env:SITE_PASSWORD}
 eggs +=
     RelStorage
     psycopg2
