updated to use ADMIN_PASSWORD instead of SITE_PASSWORD, updated the documentation and changelog

--- a/heroku.cfg
+++ b/heroku.cfg
@@ -7,7 +7,7 @@ recipe = collective.recipe.environment
 
 [instance]
 relative-paths = true
-admin: ${env:SITE_PASSWORD}
+admin: ${env:ADMIN_PASSWORD}
 eggs +=
     RelStorage
     psycopg2
