"user =" was missing in the line defining the admin credentials

--- a/heroku.cfg
+++ b/heroku.cfg
@@ -8,7 +8,7 @@ ADMIN_PASSWORD = admin
 
 [instance]
 relative-paths = true
-admin: ${env:ADMIN_PASSWORD}
+user = admin:${env:ADMIN_PASSWORD}
 eggs +=
     RelStorage
     psycopg2
