commented out the password setting in the [env] section

--- a/heroku.cfg
+++ b/heroku.cfg
@@ -4,7 +4,9 @@ relative-paths = true
 
 [env]
 recipe = collective.recipe.environment
-ADMIN_PASSWORD = admin
+# uncomment if you prefer to set the
+# password here, the default is 'admin'
+# ADMIN_PASSWORD = admin
 
 [instance]
 relative-paths = true
